--- a/backend/Auth.Api/Auth.Api.csproj
+++ b/backend/Auth.Api/Auth.Api.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
       <Folder Include="Dto\" />
+      <Folder Include="Repositories\" />
       <Folder Include="Services\" />
     </ItemGroup>
 
