--- a/backend/Auth.Api/Auth.Api.csproj
+++ b/backend/Auth.Api/Auth.Api.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <!-- Entity Framework Core com PostgreSQL -->
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0" />
@@ -25,8 +26,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Dto\" />
-      <Folder Include="Repositories\" />
+      <Folder Include="Repositories\DonorRepository\" />
+      <Folder Include="Repositories\OrganizationRepository\" />
       <Folder Include="Services\" />
     </ItemGroup>
 
