--- a/backend/User.Api/Dockerfile
+++ b/backend/User.Api/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["User.Api/User.Api.csproj", "User.Api/"]
-RUN dotnet restore "User.Api/User.Api.csproj"
+COPY ["Auth.Api/Auth.Api.csproj", "Auth.Api/"]
+RUN dotnet restore "Auth.Api/Auth.Api.csproj"
 COPY . .
-WORKDIR "/src/User.Api"
-RUN dotnet build "./User.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Auth.Api"
+RUN dotnet build "./Auth.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./User.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Auth.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "User.Api.dll"]
+ENTRYPOINT ["dotnet", "Auth.Api.dll"]
