--- a/backend/User.Api/appsettings.json
+++ b/backend/User.Api/appsettings.json
@@ -1,8 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=web_easydonate;Username=admeasydonate;Password=edadm;Port=5432;SearchPath=user"
+  },
+  "JwtSettings": {
+    "Secret": "sua-chave-super-secreta-com-pelo-menos-32-caracteres-para-jwt-funcionar-corretamente",
+    "Issuer": "EasyDonate.Auth",
+    "Audience": "EasyDonate.App",
+    "ExpirationHours": 24
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*"
