--- a/backend/User.Api/User.Api.csproj
+++ b/backend/User.Api/User.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <!-- Entity Framework Core com PostgreSQL -->
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
@@ -16,6 +17,7 @@
 
         <!-- JWT e Autenticação -->
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.8.11" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.0" />
 
         <!-- Hash de senhas -->
