--- a/backend/User.Api/User.Api.csproj
+++ b/backend/User.Api/User.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <!-- Entity Framework Core com PostgreSQL -->
+        <PackageReference Include="AutoMapper" Version="15.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
