--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       - Services__UserApi=http://user-api:8080
       - Services__AuthApi=http://auth-api:8080
     ports:
-      - "${GATEWAY_PORT}:8080"
+      - "${GATEWAY_API_PORT}:8080"
     depends_on:
       - user-api
       - auth-api
