--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,7 +107,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        - VITE_API_URL=http://localhost:${GATEWAY_PORT}
+        - VITE_API_URL=http://localhost:${GATEWAY_API_PORT}
     container_name: easydonate-frontend
     restart: unless-stopped
     ports:
