--- a/backend/src/Auth.Api/Auth.Api.csproj
+++ b/backend/src/Auth.Api/Auth.Api.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.0" />
     </ItemGroup>
 
     <ItemGroup>
