feat: configure API Gateway with YARP and JWT authentication

--- a/backend/src/Api.Gateway/appsettings.json
+++ b/backend/src/Api.Gateway/appsettings.json
@@ -5,5 +5,44 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "auth-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/api/auth/{**catch-all}"
+        }
+      },
+      "user-route": {
+        "ClusterId": "user-cluster",
+        "Match": {
+          "Path": "/api/users/{**catch-all}"
+        },
+        "AuthorizationPolicy": "authenticated"
+      }
+    },
+    "Clusters": {
+      "auth-cluster": {
+        "Destinations": {
+          "auth-api": {
+            "Address": "http://auth-api:80"
+          }
+        }
+      },
+      "user-cluster": {
+        "Destinations": {
+          "user-api": {
+            "Address": "http://user-api:80"
+          }
+        }
+      }
+    }
+  },
+  "JwtSettings": {
+    "Secret": "sua-chave-super-secreta-com-pelo-menos-32-caracteres-para-jwt-funcionar-corretamente",
+    "Issuer": "EasyDonate.Auth",
+    "Audience": "EasyDonate.App",
+    "ExpirationHours": 24
+  }
 }
