--- a/backend/src/Api.Gateway/Api.Gateway.csproj
+++ b/backend/src/Api.Gateway/Api.Gateway.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9"/>
+        <PackageReference Include="Yarp.ReverseProxy" Version="2.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
