--- a/backend/src/User.Api/appsettings.json
+++ b/backend/src/User.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=web_easydonate_user_db;Username=admuserapi;Password=admuserapi;Port=5433"
+    "DefaultConnection": ""
   },
   "JwtSettings": {
     "Secret": "sua-chave-super-secreta-com-pelo-menos-32-caracteres-para-jwt-funcionar-corretamente",
