fix: correct user route path in Api.Gateway configuration

--- a/backend/src/Api.Gateway/appsettings.json
+++ b/backend/src/Api.Gateway/appsettings.json
@@ -17,7 +17,7 @@
       "user-route": {
         "ClusterId": "user-cluster",
         "Match": {
-          "Path": "/api/users/{**catch-all}"
+          "Path": "/api/user/{**catch-all}"
         },
         "AuthorizationPolicy": "authenticated"
       }
