feat: add ApiClients configuration to appsettings.json

--- a/backend/src/Auth.Api/appsettings.json
+++ b/backend/src/Auth.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiClients": {
+    "UserApi": {
+      "BaseUrl": "http://localhost:5001",
+      "Timeout": 30
+    }
+  }
 }
