fix: baseUrl of user-api

--- a/backend/src/Auth.Api/appsettings.json
+++ b/backend/src/Auth.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ApiClients": {
     "UserApi": {
-      "BaseUrl": "http://localhost:5001",
+      "BaseUrl": "http://user-api:8080",
       "Timeout": 30
     }
   }
