feat(auth): implementa fluxo de autenticação

--- a/backend/src/Auth.Api/appsettings.json
+++ b/backend/src/Auth.Api/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ApiClients": {
-    "UserApi": {
-      "BaseUrl": "http://user-api:8080",
-      "Timeout": 30
-    }
-  }
+  "AllowedHosts": "*"
 }
