feat(gateway): configure api gateway

--- a/backend/src/Api.Gateway/appsettings.json
+++ b/backend/src/Api.Gateway/appsettings.json
@@ -25,24 +25,14 @@
     "Clusters": {
       "auth-cluster": {
         "Destinations": {
-          "auth-api": {
-            "Address": "http://auth-api:80"
-          }
+          "auth-api": {}
         }
       },
       "user-cluster": {
         "Destinations": {
-          "user-api": {
-            "Address": "http://user-api:80"
-          }
+          "user-api": {}
         }
       }
     }
-  },
-  "JwtSettings": {
-    "Secret": "sua-chave-super-secreta-com-pelo-menos-32-caracteres-para-jwt-funcionar-corretamente",
-    "Issuer": "EasyDonate.Auth",
-    "Audience": "EasyDonate.App",
-    "ExpirationHours": 24
   }
 }
