--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,21 +144,21 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-      args:
-        - VITE_API_URL=http://localhost:${GATEWAY_API_PORT}
+      target: development # Use the new development stage
     container_name: easydonate-frontend
     restart: unless-stopped
     ports:
-      - "${FRONTEND_PORT}:80"
-    depends_on:
-      - api-gateway
+      - "${FRONTEND_PORT}:5173" # Vite's default port
+    volumes:
+      - ./frontend:/app # Map source code
+      - /app/node_modules # Preserve node_modules
     networks:
       - web-easydonate-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    environment:
+      - VITE_API_URL=http://localhost:${GATEWAY_API_PORT}
+      - CHOKIDAR_USEPOLLING=true # Important for hot-reload in Docker
+    depends_on:
+      - api-gateway
 
 # ===========================================
 # NETWORKS
